--- a/trusty/Dockerfile
+++ b/trusty/Dockerfile
@@ -4,9 +4,10 @@ MAINTAINER Jorge Docampo <jorge.docampo@torusware.com>
 
 ENV root_home /root
 
-RUN apt-get -qqy update \
+RUN apt-get -qqy clean && apt-get -qqy update \
  && apt-get -qqy upgrade \
- && apt-get -qqy install wget unzip make gcc openjdk-7-jdk
+ && apt-get -qqy install wget unzip make gcc netbase \
+ && rm -rf /var/lib/apt/lists/*
 
 ENV speedus_dir /opt/torusware/speedus
 ENV netpipe_dir $speedus_dir/benchmarks/NetPIPE-C
